perftest/kafka-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafkaclient-allow-all-egress
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      app: kafkaclient
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 80
      protocol: UDP
    - port: 80
      protocol: TCP
    - port: 443
      protocol: UDP
    - port: 443
      protocol: TCP
    - port: 22
      protocol: UDP
    - port: 22
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafkaclient-allow-all-ingress
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      app: kafkaclient
  ingress:
  - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kafkaclient-allow-connection
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: kcluster-kafka
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: kafkaclient
